<resources>
    <string name="app_name">ApiTap</string>
    <string name="logo">LOGO</string>

    <string name="enter_email">Enter your Email</string>
    <string name="password">Apitap Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_pass">Create a new password</string>
    <string name="secure_login">Secure Login</string>
    <string name="privacy">By Logging in you agree to our T&amp;C and Privacy Policy</string>


    <!--sign up-->
    <string name="first_name">First Name</string>
    <string name="second_name">Last Name</string>
    <string name="shopping_assistant">Shopping Assistant</string>
    <string name="create_acc">Create Your Apitap Account</string>
    <string name="Submit">Submit</string>


    <string name="home">Home</string>
    <string name="store">Stores</string>
    <string name="ads">Ads</string>
    <string name="special">Specials</string>
    <string name="items">Items</string>
    <string name="scancode">Scan Code</string>
    <string name="shoppingcarts">Shopping Cart</string>
    <string name="messages">Messages</string>
    <string name="shoppingassistance">Shopping Assistant</string>
    <string name="favourite">Favorites</string>
    <!--<string name="saved_orders">Saved Orders</string>-->
    <string name="history">Orders,Return &amp; Exchange</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>


    <string name="nav_item">Home</string>
    <string name="login">Login</string>

    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/store</item>
        <item>@string/ads</item>
        <item>@string/special</item>
        <item>@string/items</item>
        <item>@string/scancode</item>
        <item>@string/shoppingcarts</item>
        <item>@string/messages</item>
        <item>@string/shoppingassistance</item>
        <item>@string/favourite</item>
        <item>@string/history</item>
        <item>@string/setting</item>
        <item>@string/logout</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_messages">Electronic</string>
    <string name="title_friends">Cloths</string>
    <string name="title_kit">Kitchen</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_login">Login</string>

    <string name="addnewadress">Add New Address</string>
    <string name="title_activity_address_detail">AddressDetail</string>
    <string name="addresstype">Address Type</string>
    <string name="addressline1">Address Line 1(Copany Name, House No.,....)</string>
    <string name="addressline2">Address Line2(Colony, Street, Locality/Area)</string>
    <string name="pincode">PIN Code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City/Town</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="remove">Remove</string>
    <string name="addotcart">Add to Cart</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="writeareview">Write a Review</string>
    <string name="entermsg">Enter message</string>
    <string name="intro">Tap the Button below \n to remove the list completely \n Note: All Items in list removed also .</string>
    <string name="shoppingAsst">Enter a new list by typing a name below \n add tapping the Plus button. \n \n
        View or enter items on a list by tapping on \n the arrow next to the lists name. \n \n To edit a lists name, tap and hold
    on the \n name and select edit from popup. \n \n To remove a list, tap and hold on the name \n and select delete from the popup and
    \n confirm to delete.</string>
    <string name="shoppingAsst2">Enter a new item by typing a name below \n add tapping the Plus button. \n \n
        To edit a items name and select edit from popup. \n \n To remove an item, tap and hold
    on the \n name and select delete from the popup and \n confirm to delete.</string>
    <string name="more_details">More Details</string>
    <string name="more_info">More Info.</string>
</resources>
